Revert changes (#29)
* Remove proxy layer and make frontend call backend directly with CORS

Frontend now calls the backend API directly using a configurable base URL
(VITE_API_BASE_URL) instead of routing through Vite dev proxy or nginx
reverse proxy. Backend CORS is updated to allow credentials for
cross-origin Authorization headers.

https://claude.ai/code/session_01ADs8ezub7YKbBU7CVx8v2C

* Use VM_HOST to construct backend base URL directly

Instead of a full VITE_API_BASE_URL, derive the backend URL from
VITE_VM_HOST so it stays consistent with the existing VM_HOST env var
used elsewhere in docker-compose.

https://claude.ai/code/session_01ADs8ezub7YKbBU7CVx8v2C

* Set CORS allowed origin from VM_HOST instead of wildcard

CORS now restricts allowed origins to the frontend's actual origin
(https://{VM_HOST}) via the app.cors.allowed-origin property, and
explicitly lists only Authorization and Content-Type as allowed headers.

https://claude.ai/code/session_01ADs8ezub7YKbBU7CVx8v2C

* Restore nginx API proxy and route frontend through same origin

Nginx needs to proxy /api/ to the backend for HTTPS termination.
Frontend now calls https://{VM_HOST}/api/... (same origin via nginx)
instead of hitting port 8085 directly, eliminating CORS issues entirely.

https://claude.ai/code/session_01ADs8ezub7YKbBU7CVx8v2C

* Fix white gap at top of login page

The auth-container's top margin was collapsing out of app-container,
exposing the white body background. Use flexbox centering on the
app-container when it wraps the auth card instead.

https://claude.ai/code/session_01ADs8ezub7YKbBU7CVx8v2C

---------

Co-authored-by: Claude <noreply@anthropic.com>